--- a/style/dist.css
+++ b/style/dist.css
@@ -3462,7 +3462,7 @@ input[type=button].btn-block {
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
   border-color: #007bff;
-  background-color: #007bff;
+  background-color: #52535f;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
@@ -11366,15 +11366,20 @@ Example:
 </div>
 
 */
-.background-image {
-  /* https://css-tricks.com/perfect-full-page-background-image/ */
-  background: url("../images/background-landing.jpg") no-repeat center center fixed;
+.body-cover {
+  background: url("/images/background-landing.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
   background-size: cover;
-  min-height: 100vh;
+  -o-background-size: cover;
 }
 
 .text-brand {
   font-family: "Fira Sans";
+}
+
+h1 {
+  color: #fff;
 }
 
 .btn-link {
