--- a/style/theme.scss
+++ b/style/theme.scss
@@ -239,3 +239,6 @@ $input-height-lg: add(
    $text-height,
    add($input-padding-y-lg * 2, $border-width * 2, false)
 );
+
+$component-active-bg: theme-color("primary");
+$custom-control-indicator-checked-bg: $component-active-bg;
