--- a/style/style.scss
+++ b/style/style.scss
@@ -31,6 +31,10 @@ h1 {
    color: $white;
 }
 
+h2 {
+   font-family: "Noto Serif", serif;
+}
+
 .btn-link {
    font-weight: $font-weight-bold;
    padding-left: 0;
