--- a/style/style.scss
+++ b/style/style.scss
@@ -50,7 +50,7 @@ h2 {
    font-family: $font-family-serif;
 }
 
-.card-body-cover {
+.card-body-padding {
    padding: 16px;
 }
 .card-body.bg-primary {
